fixed the issues with scrollbar and the color for cards

--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -18,7 +18,7 @@
   position: fixed;
   background-color: rgb(40, 40, 43);
   z-index: 99;
-  overflow-y: scroll;
+  overflow-y: visible;
   overflow-x: hidden;
 }
 
